test/corpus/argument/unary_operation.txt
====================================
unary operation
====================================

f(-2, 5).

---

(source_file
  (fact
    (atom
      (qualified_name
        (identifier))
      (argument
        (unary_operation
          (argument
            (constant
              (decimal)))))
      (argument
        (constant
          (decimal))))))
