test/corpus/directive/limitsize.txt
=====================================
limitsize directive
=====================================

.limitsize A(n=47)

-------------------------------------

(source_file
 (directive
  (limitsize_kw)
  (qualified_name
   (identifier))
  (directive_attribute_assignment
   (identifier)
   (directive_value
    (decimal)))))
